k8s/minikube/common/registry/deploy-registry-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: registry
  labels:
    app: gridcapa
    component: gridcapa
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
